[package]
name = "ethereum"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3" 
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
clap = "3.2.16"
colored = "2.0.0"